# AsyncTaskManager

./: CMakeLists.txt  LICENSE  README.md  TaskManager.cpp  TaskManager.h  main.cpp
lib/: CMakeLists.txt  TaskManager.h
src/: CMakeLists.txt  TaskManager.h  main.cpp
test/: CMakeLists.txt  DummyProcess.cpp  DummyProcess.h  gtest.cpp
